--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@
 
 :root {
   --background-color: #f1f1f1;
-  --hover-color: #ec732f;
-  --icon-color: #ec732f;
+  --hover-color: #55bf64;
+  --icon-color: #55bf64;
 }
 
 * {
