--- a/style.css
+++ b/style.css
@@ -141,12 +141,16 @@ body {
   width: 50%;
   box-shadow: 0px 5px 15px 0px rgba(212, 201, 201, 0.75);
 }
-
+.Resource{
+  width: 25% !important;
+}
 .mega_menu_item {
   width: 50%;
   padding: 30px 20px;
 }
-
+.Resource .mega_menu_item{
+  width: 100%;
+}
 .main_menu ul li .mega_menu_item a {
   padding: 10px 0;
 }
